--- a/SongWeb/appsettings.Production.json
+++ b/SongWeb/appsettings.Production.json
@@ -7,13 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=your-production-server;Database=songbookstore;User Id=your-username;Password=your-password;"
+    "DefaultConnection": "@Microsoft.KeyVault(SecretUri=https://songyang-bookstore.vault.azure.net/secrets/DefaultConnection)"
   },
   "Stripe": {
-    "SecretKey": "your-stripe-secret-key",
-    "PublishableKey": "your-stripe-publishable-key"
+    "SecretKey": "@Microsoft.KeyVault(SecretUri=https://songyang-bookstore.vault.azure.net/secrets/stripe-secret-key)",
+    "PublishableKey": "@Microsoft.KeyVault(SecretUri=https://songyang-bookstore.vault.azure.net/secrets/stripe-publishable-key)"
   },
   "SendGrid": {
-    "SecretKey": "your-sendgrid-key"
+    "SecretKey": "@Microsoft.KeyVault(SecretUri=https://songyang-bookstore.vault.azure.net/secrets/sendgrid)"
+  },
+  "AzureStorage": {
+    "ConnectionString": "@Microsoft.KeyVault(SecretUri=https://songyang-bookstore.vault.azure.net/secrets/azure-storage-connection-string)",
+    "ContainerName": "product-images"
   }
 }
