--- a/SongWeb/appsettings.json
+++ b/SongWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=your-server;Database=songbookstore;User Id=your-username;Password=your-password;"
+    "DefaultConnection": "Server=localhost;Port=3306;Database=SongBookStore;User=root;Password=123456;"
   },
   "Stripe": {
     "SecretKey": "your-stripe-secret-key",
